@@ -6,11 +6,14 @@ NISOL Alexis
 FAMILIAR Enzo
 
 
+## Génération de la javadoc
+javadoc -d doc -charset utf8 -noqualifier all --module-path /usr/share/openjfx/lib/ --add-modules javafx.controls,javafx.fxml src/*.java
+
 ### Compilation
-javac -cp ./src/ -encoding UTF8 -d bin src/*.java
+javac -cp ./src/ -d bin --module-path /usr/share/openjfx/lib/ --add-modules javafx.controls,javafx.fxml src/*.java
 
 ### Exécution
-java -cp ./bin Executable
+java -cp .:bin:img --module-path /usr/share/openjfx/lib/ --add-modules javafx.controls,javafx.fxml Executable
 
 ### Faire les tests
 javac -cp lib/junit-4.13.2.jar:. Tests.java
